# mHM-Tools

./: .gitignore  .gitlab-ci.yml  .zenodo.json  AGENTS.md  AUTHORS.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: main.yaml  main.yml
docs/source/: api.rst  cli.rst  conf.py  index.md  index.rst
docs/source/_templates/autosummary/: class.rst  function.rst  module.rst
docs/source/about/: index.rst
docs/source/cli/: examples.rst  reference.rst
examples/: 01_version_test.py
src/mhm_tools/: __init__.py
src/mhm_tools/_cli/: _2d_map.py  __init__.py  __main__.py  _bankfull.py  _calculate_pet.py  _create_catchment.py  _create_header.py  _create_idgauges.py  _create_mhm_restart_file.py  _create_mhm_restart_from_setup.py  _create_subdomain_masks.py  _crop_mhm_setup.py  _difference.py  _discharge_evaluation.py  _file_converter.py  _fill_nearest.py  _grdc_validation.py  _gridded_data_evaluation.py  _gridded_data_validation.py  _hydrograph.py  _landcover_ascii_to_nc.py  _latlon.py  _link_folder_tree.py  _long_term_mean.py  _long_term_mean_difference.py  _long_term_mean_validation.py  _main.py  _merge.py  _metric_plots.py  _mhm_run_overview.py  _prepare_mhm_forcings.py  _ratio.py  _regrid.py  _relative_difference.py  _seasonality_validation.py  _taylor_diagram.py
src/mhm_tools/common/: __init__.py  catchment_maps.py  cli_utils.py  constants.py  esri_grid.py  file_handler.py  logger.py  netcdf.py  plotter.py  provenance.py  resolution_handler.py  spatial_metrics.py  time_utils.py  utils.py  xarray_utils.py
src/mhm_tools/common/metrics/: __init__.py  esp.py  metrics_handler.py  mspaef.py  spaef.py  tsm.py  waspaef.py
src/mhm_tools/post/: 2d_map.py  GRDC_validation.py  __init__.py  bankfull.py  bankfull_discharge.py  difference.py  discharge_evaluation.py  gridded_data_evaluation.py  gridded_data_validation.py  hydrograph.py  long_term_mean.py  long_term_mean_difference.py  long_term_mean_validation.py  metric_plots.py  mhm_run_overview.py  netcdf4.py  ratio.py  relative_difference.py  seasonality_grid_validation.py  taylor_diagram copy.py  taylor_diagram.py
src/mhm_tools/pre/: __init__.py  catchment.py  create_id_gauges.py  create_mhm_restart_file.py  create_mhm_restart_from_setup.py  create_subdomain_masks.py  crop_mhm_setup.py  fill_nearest.py  landcover_ascii_to_nc.py  latlon.py  link_folder_tree.py  merge.py  pet_calc.py  prepare_mhm_forcings.py  regrid.py  subdomain_masks.py
tests/: conftest.py  test_bankfull.py  test_catchment.py  test_catchment_maps.py  test_cli.py  test_cli_utils.py  test_create_mhm_restart_file.py  test_create_mhm_restart_from_setup.py  test_crop_mhm_setup.py  test_file_handler.py  test_file_handler_xarray_utils_extra.py  test_file_uitls.py  test_fill_nearest.py  test_grdc_evaluation.py  test_gridded_data_evaluation.py  test_gridded_evaluation.py  test_hydrograph.py  test_landcover_ascii_to_nc.py  test_latlon.py  test_link_folder_tree.py  test_metric_plots.py  test_mhm.py  test_netcdf_encoding.py  test_pet_calc.py  test_regrid.py  test_spatial_metrics.py  test_taylor_diagram.py  test_time_utils.py  test_xarray_utils.py
tests/files/: lc_1981.asc  lc_1991.asc  mRM_Fluxes_States.nc
tests/files/test_create_catchment/: fdir.nc
tests/files/test_create_restart/: latlon_0p0625.nc
tests/files/test_hydrograph/: README.md  discharge.nc
tests/output/: daily_discharge.out  discharge.nc  mHM_Fluxes_States.nc  mRM_Fluxes_States.nc
